package behavioral.chain_of_responsibility.CB1;

public abstract class ATM {
    private int menhGia;
    public abstract ATM thietLapMenhGiaThapHon(ATM atm);
    //public void rutTien(int soTien);
}
